# SudoQ

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt  Main.cpp
Source/Application/: Application.cpp  Application.hpp  CMakeLists.txt
Source/Application/Scene/: CMakeLists.txt  Scene.cpp  Scene.hpp
Source/Board/: Board.cpp  Board.hpp  CMakeLists.txt
Source/Board/BoardCell/: BoardCell.cpp  BoardCell.hpp
Source/Check/: BoardChecker.cpp  BoardChecker.hpp  CMakeLists.txt
Source/Convert/: CellValueConverter.cpp  CellValueConverter.hpp
Source/Difficulty/: CMakeLists.txt  DifficultySpawner.cpp  DifficultySpawner.hpp
Source/Difficulty/Default/: DefaultDiffSpawner.cpp  DefaultDiffSpawner.hpp
Source/Difficulty/Guarantee/: GuaranteeDiffSpawner.cpp  GuaranteeDiffSpawner.hpp
Source/Difficulty/Random/: RandDiffSpawner.cpp  RandDiffSpawner.hpp
Source/Input/: CMakeLists.txt
Source/Input/Handle/: InputHandler.hpp
Source/Input/Take/: CMakeLists.txt  InputTaker.cpp  InputTaker.hpp
Source/InputHandle/: CMakeLists.txt  InputHandler.cpp  InputHandler.hpp
Source/InputHandle/Exit/: ExitInputHandler.cpp  (+1 more)
Source/InputTaker/: InputTaker.hpp
Source/Logic/: CMakeLists.txt
Source/Menu/: Menu.hpp
Source/Print/: BoardCmdPrinter.cpp  BoardCmdPrinter.hpp  BoardPrinter.cpp  BoardPrinter.hpp  CMakeLists.txt
Source/Scene/: CMakeLists.txt  Scene.cpp  Scene.hpp
Source/Spawn/: BoardSpawner.hpp  CMakeLists.txt
Source/Utility/: CMakeLists.txt
Source/VictoryHandle/: CMakeLists.txt  VictoryHandle.cpp  VictoryHandle.hpp  VictoryHandler.cpp  VictoryHandler.hpp
(+69 files in other folders)
